# persist

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/plans/: PERSIST.md
src/: convert.rs  error.rs  lib.rs  serde_compat.rs  value.rs
src/store/: file_backed.rs  json.rs  mod.rs  shared_preferences.rs  toml.rs  user_defaults.rs  web.rs
tests/android/: .gitignore  settings.gradle.kts
tests/android/app/: build.gradle.kts
tests/android/app/src/androidTest/java/la/sovran/persist/test/: PersistTest.kt  PersistTestBridge.kt
tests/android/app/src/main/: AndroidManifest.xml
tests/android/native/: Cargo.toml
tests/android/native/src/: lib.rs
