[package]
name = "persist"
version = "1.0.0"
edition = "2021"
description = "Cross-platform data persistence with pluggable backends"
license = "MIT"
repository = "https://github.com/user/persist"

[features]
default = []
json = ["serde", "dep:serde_json"]
toml = ["serde", "dep:toml"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
toml = { version = "0.8", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "tvos", target_os = "watchos"))'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSUserDefaults", "NSString", "NSData", "NSArray", "NSDictionary", "NSValue", "NSObject", "NSEnumerator", "NSNull"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
